; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fcoe/extr_fcoe_transport.c_fcoe_wwn_to_str.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fcoe/extr_fcoe_transport.c_fcoe_wwn_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"%02x%02x%02x%02x%02x%02x%02x%02x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fcoe_wwn_to_str(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [8 x i32], align 16
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %10 = call i32 @u64_to_wwn(i32 %8, i32* %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %14 = load i32, i32* %13, align 16
  %15 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 1
  %16 = load i32, i32* %15, align 4
  %17 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 2
  %18 = load i32, i32* %17, align 8
  %19 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 3
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 4
  %22 = load i32, i32* %21, align 16
  %23 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 5
  %24 = load i32, i32* %23, align 4
  %25 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 6
  %26 = load i32, i32* %25, align 8
  %27 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 7
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @snprintf(i8* %11, i32 %12, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %16, i32 %18, i32 %20, i32 %22, i32 %24, i32 %26, i32 %28)
  ret void
}

declare dso_local i32 @u64_to_wwn(i32, i32*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
